src/objects/Shipment__c.object
<CustomObject>
    <fields>
        <fullName>AMDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CmhId__c</fullName>
        <formula>TEXT(Account__r.CMHID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cmh Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateTimeCreated__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date and Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is an indicator that all of the items for the shipment were delivered.  This field is used in the scheduled job that checks and updated the delivery status.</description>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EstimatedShipDate__c</fullName>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpediteReason__c</fullName>
        <label>Expedite Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Avoid Significant Install Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prevent Deinstall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Revisit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <label>Order ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedWorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Work Order</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestedDateOfArrival__c</fullName>
        <label>Requested Date of Arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedPickupDate__c</fullName>
        <label>Requested Pick-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShippedDate__c</fullName>
        <label>Shipped Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>Shipping City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <label>Shipping Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <label>Shipping State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet2__c</fullName>
        <label>Shipping Street 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <label>Shipping Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isExpedited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedited</label>
        <type>Checkbox</type>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>